26.04.04 불필요 코드 정리